force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <label>Postulant</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ID Postulant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Postulants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>