force-app/main/default/objects/Applicant__c/fields/ASCII_name__c.field-meta.xml
<CustomField>
    <fullName>ASCII_name__c</fullName>
    <label>ASCII Name</label>
    <length>120000</length>
    <type>Html</type>
</CustomField>