force-app/main/default/objects/Applicant__c/fields/Doc_resume__c.field-meta.xml
<CustomField>
    <fullName>Doc_resume__c</fullName>
    <label>Resume Doc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>