force-app/main/default/objects/Applicant__c/fields/HR_Contact__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact RH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>