force-app/main/default/objects/Applicant__c/fields/Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Poste</label>
    <referenceTo>Job_Requisition__c</referenceTo>
    <relationshipLabel>Postulants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>