force-app/main/default/objects/Applicant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>Schedule Interview</fullName>
                <label>Planifier Entretien</label>
            </value>
            <value>
                <fullName>Extend Offer</fullName>
                <label>Faire une offre</label>
            </value>
            <value>
                <fullName>Hired</fullName>
                <label>Embauché</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Refusé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>