force-app/main/default/objects/Applicant__c/listViews/Entretien_planifier.listView-meta.xml
<ListView>
    <fullName>Entretien_planifier</fullName>
    <columns>NAME</columns>
    <columns>Job_Requisition__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>email__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Schedule Interview</value>
    </filters>
    <label>Entretien à planifier</label>
</ListView>