force-app/main/default/objects/Applicant__c/listViews/Plan_Interview.listView-meta.xml
<ListView>
    <fullName>Plan_Interview</fullName>
    <columns>NAME</columns>
    <columns>Job_Requisition__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>email__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Schedule Interview</value>
    </filters>
    <label>Interviews to be planned</label>
</ListView>